--- a/app/assets/styles/global/_page.scss
+++ b/app/assets/styles/global/_page.scss
@@ -17,7 +17,7 @@
   background: $accent-color;
   color: #fff;
   padding: ($global-spacing * 1.5) 0;
-  box-shadow: 0 8px 16px 2px rgba($base-color, 0.08);
+  box-shadow: 0 14px 16px 0 rgba($base-color, 0.08);
 
   a {
     color: inherit;
