Style settings form

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -89,6 +89,7 @@
    ========================================================================== */
 
 @import "scenarios/global";
+@import "scenarios/single";
 
 /* UhOh
    ========================================================================== */
