--- a/app/assets/styles/global/_cards.scss
+++ b/app/assets/styles/global/_cards.scss
@@ -21,6 +21,7 @@
   backface-visibility: hidden;
   padding: $global-spacing;
   overflow: hidden;
+  flex: 1 1 100%;
 
   /* Animation */
   transition: all 0.16s ease 0s;
