Update icon library

--- a/app/assets/styles/projects/_single.scss
+++ b/app/assets/styles/projects/_single.scss
@@ -163,7 +163,7 @@
   }
 
   &.villages::before {
-    @extend %collecticon-user;
+    @extend %collecticon-houses;
   }
 
   &.admin-bounds::before {
