Fix style for tooltips

--- a/app/assets/styles/core/_utilities.scss
+++ b/app/assets/styles/core/_utilities.scss
@@ -118,7 +118,7 @@
 
 .visually-disabled {
   &, &:hover, &:active, &:focus {
-    opacity: 0.48;
+    opacity: 0.48 !important;
     cursor: not-allowed;
   }
 }
