--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -101,3 +101,9 @@
    ========================================================================== */
 
 @import "core/utilities";
+
+
+/* Vendor
+   ========================================================================== */
+
+@import "vendor/react-tooltip";
