--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -57,6 +57,7 @@
 
 @import "core/base";
 @import "core/collecticons"; // Webfont icon library: Collecticons
+@import "core/webfont-muli"; // Webfont: Muli
 @import "core/typography";
 @import "core/tables";
 @import "core/media";
