--- a/app/assets/styles/projects/_hub.scss
+++ b/app/assets/styles/projects/_hub.scss
@@ -30,3 +30,24 @@
     width: 100%;
   }
 }
+
+.project--card {
+
+  .card__thumbnail {
+    height: 10rem;
+    width: 100%;
+  }
+
+  .map-wrapper {
+    width: 100%;
+    height: 100%;
+  }
+
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 128%;
+  }
+}
