--- a/app/assets/styles/scenarios/_single.scss
+++ b/app/assets/styles/scenarios/_single.scss
@@ -67,12 +67,14 @@
   margin-left: calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
   height: 32rem;
+  background: tint($base-color, 96%);
 
   > * {
     z-index: 190;
   }
 
-  &::before, &::after {
+  &::before,
+  &::after {
     content: '';
     position: absolute;
     z-index: 200;
