Change header buttons copy and appearance

--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -64,12 +64,16 @@
 
     > * {
       vertical-align: top;
+    }
+
+    .ipa-main {
       margin-left: $global-spacing / 2;
     }
   }
 
   &__body {
     padding: ($global-spacing * 4) 0;
+    min-height: $global-spacing * 24;
 
     > .inner {
       @extend .row, .row--centered;
