--- a/app/assets/styles/projects/_global.scss
+++ b/app/assets/styles/projects/_global.scss
@@ -40,7 +40,7 @@
 
 .ipa-download,
 .ipa-pencil {
-   @extend .button--primary-raised-light;
+   @extend .button--achromic;
 }
 
 .ipa-download::before {
