Normalize inpage section titles

--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -82,4 +82,10 @@
       margin-bottom: 0;
     }
   }
+
+  &__section-title {
+    @include heading(1.5rem);
+    margin-bottom: $global-spacing * 2;
+    text-align: center;
+  }
 }
