--- a/app/assets/styles/global/_page.scss
+++ b/app/assets/styles/global/_page.scss
@@ -111,7 +111,7 @@
   font-size: 0.875rem;
   line-height: 1.25rem;
   color: tint($base-color, 64%);
-  box-shadow: inset 0 1px 0 0 $base-alpha-color;
+  background: rgba($base-color, 0.04);
 
   small {
     font-size: inherit;
