--- a/app/assets/styles/projects/_single.scss
+++ b/app/assets/styles/projects/_single.scss
@@ -9,6 +9,11 @@
   @include column(6/12, $cycle: 2);
   margin-top: $global-spacing * 2;
 
+  &:nth-child(1),
+  &:nth-child(2) {
+    margin-top: 0;
+  }
+
   > .inner {
     position: relative;
     padding-left: $global-spacing * 2;
@@ -92,10 +97,6 @@
   &:nth-child(1),
   &:nth-child(2) {
     margin-top: 0;
-  }
-
-  &__title {
-    @include heading(1.25rem);
   }
 }
 
