Fix link style. Fix #96

--- a/app/assets/styles/settings/_mixins.scss
+++ b/app/assets/styles/settings/_mixins.scss
@@ -130,8 +130,11 @@
     @error "Invalid style property for button.";
   }
 
-  color: $text-color;
   background-color: $bg-color;
+
+  &, &:visited {
+    color: $text-color;
+  }
 
   @if $shadow-color {
     box-shadow: 0 -1px 1px 0 rgba($base-color, 0.04), 0 2px 6px 0 $shadow-color;
