Move project and scenario description

--- a/app/assets/styles/projects/_single.scss
+++ b/app/assets/styles/projects/_single.scss
@@ -85,6 +85,12 @@
     }
   }
 
+  &__body {
+    > *:last-child {
+      margin-bottom: 0;
+    }
+  }
+
   .form__label {
     @extend .visually-hidden;
   }
