--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -22,6 +22,9 @@
   &__headline {
     @include column(6/12);
 
+    /* Animation */
+    @include animation(reveal 0.24s ease 0s 1);
+
     > *:last-child {
       margin-bottom: 0;
     }
@@ -81,6 +84,9 @@
     text-align: right;
     font-size: 0;
 
+    /* Animation */
+    @include animation(reveal 0.48s ease 0s 1);
+
     > * {
       vertical-align: top;
     }
@@ -92,6 +98,9 @@
 
   &__body {
     padding: ($global-spacing * 3) 0;
+
+    /* Animation */
+    @include animation(reveal 0.64s ease 0s 1);
 
     > .inner {
       @extend .row, .row--centered;
