--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -11,6 +11,7 @@
     color: #fff;
     padding: ($global-spacing * 1.5) 0;
     box-shadow: 0 14px 16px 0 rgba($base-color, 0.08);
+    min-height: 5rem;
 
     > .inner {
       @extend .row, .row--centered;
