Improve descriptions and add link to help on project setup

--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -117,6 +117,10 @@
     margin-bottom: $global-spacing * 2;
     text-align: center;
   }
+
+  &__section-description {
+    margin-bottom: $global-spacing * 2;
+  }
 }
 
 
