Center help page content

--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -124,6 +124,16 @@
 }
 
 
+/* Inpage modifiers
+   ========================================================================== */
+
+.inpage--single {
+  .prose--responsive {
+    @include column(8/12, $offset: 2/12);
+  }
+}
+
+
 /* Inpage actions
    ========================================================================== */
 
