Change villages to origins

--- a/app/assets/styles/projects/_single.scss
+++ b/app/assets/styles/projects/_single.scss
@@ -175,7 +175,7 @@
     @extend %collecticon-page-cog;
   }
 
-  &.villages::before {
+  &.origins::before {
     @extend %collecticon-houses;
   }
 
