Add qs and react-paginate modules and styles

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -109,3 +109,4 @@
    ========================================================================== */
 
 @import "vendor/react-tooltip";
+@import "vendor/react-paginate";
