--- a/app/assets/styles/projects/_single.scss
+++ b/app/assets/styles/projects/_single.scss
@@ -2,6 +2,11 @@
    Projects: Single
    ========================================================================== */
 
+.debug-wrapper {
+  float: left;
+  clear: both;
+}
+
 /* Project setup block
    ========================================================================== */
 
