--- a/app/assets/styles/projects/_single.scss
+++ b/app/assets/styles/projects/_single.scss
@@ -2,102 +2,41 @@
    Projects: Single
    ========================================================================== */
 
-.debug-wrapper {
-  float: left;
-  clear: both;
-}
-
-/* Project setup block
+/* Project setup blocks
    ========================================================================== */
 
-.psb {
-  @include column(6/12, $cycle: 2);
-  margin-top: $global-spacing * 2;
+.psb-grid {
+  display: flex;
+  flex-wrap: wrap;
 
-  &:nth-child(1),
-  &:nth-child(2) {
-    margin-top: 0;
+  .psb {
+    @include column(6/12, $cycle: 2);
+    margin-top: $global-spacing * 2;
+    display: flex;
+
+    &:nth-child(1),
+    &:nth-child(2) {
+      margin-top: 0;
+    }
   }
+}
 
-  > .inner {
+.psb {
+  .card__contents {
     position: relative;
-    padding-left: $global-spacing * 2;
+    padding: ($global-spacing * 2) ($global-spacing * 2) ($global-spacing * 2) ($global-spacing * 5);
 
     &::before {
-      @extend %collecticon-sm-tick;
       position: absolute;
-      top: 0.05rem;
-      left: 0;
-      background: $base-font-color;
-      height: 1.5rem;
-      width: 1.5rem;
-      border-radius: $full-border-radius;
-      color: #fff;
-      font-size: 1rem;
-      line-height: 1.5rem;
-      text-align: center;
+      @extend %collecticon-page-cog;
+      left: $global-spacing * 2;
+      font-size: 2rem;
       opacity: 0.32;
 
-      /* Animation */
-      transition: all 0.32s ease 0s;
-    }
-  }
-
-  &--complete > .inner::before {
-    opacity: 1;
-  }
-
-  &__header {
-    margin-bottom: $global-spacing * 1.5;
-
-    > *:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  &__headline {
-    > *:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  &__title {
-    @include heading(1.25rem);
-    margin-bottom: $global-spacing / 2;
-  }
-
-  &__description {
-    color: rgba($base-font-color, 0.64);
-
-    > *:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  &__actions {
-    font-size: 0;
-
-    .button {
-      margin: 0 ($global-spacing / 4);
-
-      &:first-child {
-        margin-left: 0;
-      }
-
-      &:last-child {
-        margin-right: 0;
+      .red & {
+        
       }
     }
-  }
-
-  &__body {
-    > *:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  .form__label {
-    @extend .visually-hidden;
   }
 }
 
@@ -115,13 +54,7 @@
   }
 }
 
-// .diptych--info {
-//   @include column(4/12);
-// }
 
-// .diptych--scenarios {
-//   @include column(8/12);
-// }
 
 /* Details list
    ========================================================================== */
