--- a/app/assets/styles/global/_cards.scss
+++ b/app/assets/styles/global/_cards.scss
@@ -11,13 +11,11 @@
 }
 
 .card__contents {
+  @extend %card-skin;
   position: relative;
   z-index: 1;
   display: flex;
   flex-direction: column;
-  background: #fff;
-  box-shadow: 0 4px 16px 2px rgba($base-color, 0.08);
-  border-radius: $base-border-radius;
   backface-visibility: hidden;
   padding: $global-spacing;
   overflow: hidden;
