--- a/app/assets/styles/global/_forms.scss
+++ b/app/assets/styles/global/_forms.scss
@@ -4,7 +4,7 @@
 
 .form {
   margin-bottom: $global-spacing;
-  
+
   > *:last-child {
     margin-bottom: 0;
   }
@@ -303,16 +303,13 @@ textarea.form__control {
    ========================================================================== */
 
 .form__fieldset {
-  padding: 0 0 ($global-spacing * 1.5) 0;
-  margin: 0 0 ($global-spacing * 1.5) 0;
-  border: 0;
+  @extend .clearfix;
   position: relative;
-  box-shadow: inset 0 -1px 0 0 $base-alpha-color;
-
-  &:last-child {
-    padding-bottom: 0;
-    box-shadow: none;
-  }
+  border: 0;
+  border-radius: $base-border-radius;
+  margin: 0 (-$global-spacing) $global-spacing (-$global-spacing);
+  padding: $global-spacing;
+  background: rgba($base-color, 0.04);
 
   > *:last-child {
     margin-bottom: 0;
@@ -321,13 +318,52 @@ textarea.form__control {
 
 .form__legend {
   @extend .heading-alt;
-  display: block;
-  width: 100%;
+  font-size: 0.75rem;
+  line-height: 1rem;
   border: 0;
+  float: left;
+  width: 100%;
   margin: 0 0 $global-spacing 0;
-  padding: 0;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+  padding: ($global-spacing / 4) 0;
+}
+
+.form__fieldset-header {
+  display: flex;
+  width: 100%;
+  margin-bottom: $global-spacing;
+
+  > *:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.form__fieldset-headline {
+  > *:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.form__fieldset-actions {
+  flex: 1 1 auto;
+  text-align: right;
+  font-size: 0;
+  white-space: nowrap;
+
+  * {
+    vertical-align: top;
+  }
+
+  > *:last-child {
+    margin-right: -$global-spacing / 4;
+  }
+}
+
+.ffa-trash {
+  @extend .button, .button--small, .button--danger-plain, .button--text-hidden;
+
+  &::before {
+    @extend %collecticon-trash-bin;
+  }
 }
 
 
