Add option to abort analysis, once it started

--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -183,3 +183,11 @@
 .ipa-arrow-loop::before {
   @extend %collecticon-arrow-loop;
 }
+
+.ipa-cancel {
+  @extend .button--danger-raised-light;
+
+  &::before {
+    @extend %collecticon-sm-xmark;
+  }
+}
