--- a/app/assets/styles/global/_forms.scss
+++ b/app/assets/styles/global/_forms.scss
@@ -323,14 +323,14 @@ textarea.form__control {
   border: 0;
   float: left;
   width: 100%;
-  margin: 0 0 $global-spacing 0;
+  margin: 0 0 ($global-spacing / 2) 0;
   padding: ($global-spacing / 4) 0;
 }
 
 .form__fieldset-header {
   display: flex;
   width: 100%;
-  margin-bottom: $global-spacing;
+  margin-bottom: ($global-spacing / 2);
 
   > *:last-child {
     margin-bottom: 0;
