--- a/app/assets/styles/global/_forms.scss
+++ b/app/assets/styles/global/_forms.scss
@@ -147,11 +147,6 @@ textarea.form__control {
   }
 }
 
-.form__group--attached {
-  margin-top: - $global-spacing;
-  min-height: 2rem;
-}
-
 
 /* Color modifiers
    ========================================================================== */
@@ -343,7 +338,7 @@ textarea.form__control {
   }
 }
 
-.form__fieldset-actions {
+.form__fieldset-group {
   flex: 1 1 auto;
   text-align: right;
   font-size: 0;
@@ -355,14 +350,6 @@ textarea.form__control {
 
   > *:last-child {
     margin-right: -$global-spacing / 4;
-  }
-}
-
-.ffa-trash {
-  @extend .button, .button--small, .button--danger-plain, .button--text-hidden;
-
-  &::before {
-    @extend %collecticon-trash-bin;
   }
 }
 
@@ -594,7 +581,64 @@ label[for] {
 }
 
 
-/* Form extra and main actions
+/* Form inner actions
+   ========================================================================== */
+
+.form__inner-header {
+  display: flex;
+  width: 100%;
+  margin-bottom: ($global-spacing / 2);
+
+  > *:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.form__inner-headline {
+  > *:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.form__inner-actions {
+  flex: 1 1 auto;
+  text-align: right;
+  font-size: 0;
+  white-space: nowrap;
+
+  * {
+    vertical-align: top;
+  }
+
+  > *:last-child {
+    margin-right: -$global-spacing / 4;
+  }
+}
+
+/**
+ * "fia-" prefix stands for "form inner action"
+ * Used in "form__inner-actions"
+ */
+
+[class^="fia-"],
+[class*=" fia-"] {
+  @extend .button, .button--small;
+}
+
+.fia-trash {
+  @extend .button--danger-plain, .button--text-hidden;
+
+  &::before {
+    @extend %collecticon-trash-bin;
+  }
+}
+
+.fia-global {
+  @extend .button--primary-plain;
+}
+
+
+/* Form extra actions
    ========================================================================== */
 
 .form__extra-actions {
