--- a/app/assets/styles/global/_forms.scss
+++ b/app/assets/styles/global/_forms.scss
@@ -453,17 +453,13 @@ label[for] {
     }
   }
 
-  &:hover {
-    .form__option__ui {
-      box-shadow: inset 0 0 0 2px rgba($base-color, 0.32);
-    }
+  &:hover .form__option__ui {
+    box-shadow: inset 0 0 0 2px rgba($base-color, 0.32);
   }
 
-  &:focus,
-  &:active {
-    .form__option__ui {
-      box-shadow: inset 0 0 0 2px $link-color;
-    }
+  input:focus  ~ .form__option__ui,
+  &:active .form__option__ui {
+    box-shadow: inset 0 0 0 2px $link-color;
   }
 
   input:checked ~ .form__option__ui {
